--- a/src/componentes/AnchorsNavbar/anchorsnavbar.css
+++ b/src/componentes/AnchorsNavbar/anchorsnavbar.css
@@ -1,6 +1,7 @@
-.a-navbar {
+.anchors-navbar {
     border: 1px solid;
-    border-radius: 3px;
+    border-radius: 5px;
     margin-right: 2rem;
     color: black;
+    padding: 10px;
 }
